# ChangeLog for app-vim/breakpts
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/breakpts/ChangeLog,v 1.8 2008/08/23 18:21:10 maekke Exp $

  23 Aug 2008; Markus Meier <maekke@gentoo.org> breakpts-3.1.ebuild:
  add ~amd64, bug #226141

  22 Nov 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  breakpts-3.1.ebuild:
  stable on ppc

  07 Apr 2006; Bryan Østergaard <kloeri@gentoo.org metadata.xml:
  Remove ciaranm from metadata.xml.

  03 Sep 2004; Ciaran McCreesh <ciaranm@gentoo.org> breakpts-3.1.ebuild:
  Help text, bug #62559

  20 Aug 2004; Ciaran McCreesh <ciaranm@gentoo.org> breakpts-3.1.ebuild:
  Stable on x86, sparc, mips

  17 Jul 2004; David Holm <dholm@gentoo.org> breakpts-3.1.ebuild:
  Added to ~ppc.

*breakpts-3.1 (15 Jul 2004)

  15 Jul 2004; Ciaran McCreesh <ciaranm@gentoo.org> +metadata.xml,
  +breakpts-3.1.ebuild:
  New plugin
