@@ -1,6 +1,11 @@
 # ChangeLog for app-vim/breakpts
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/breakpts/ChangeLog,v 1.8 2008/08/23 18:21:10 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/breakpts/ChangeLog,v 1.9 2008/09/20 12:19:38 hawking Exp $
+
+*breakpts-4.0 (20 Sep 2008)
+
+  20 Sep 2008; Ali Polatel <hawking@gentoo.org> +breakpts-4.0.ebuild:
+  Version bump.
 
   23 Aug 2008; Markus Meier <maekke@gentoo.org> breakpts-3.1.ebuild:
   add ~amd64, bug #226141
